--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/banner.png);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(../images/banner.png);
     background-position: center;
     background-size: cover;
     position: relative;
 }
 .header.h2{
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/220926_Sat.png);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(../images/220926_Sat.png);
 }
 
 .text-box{
@@ -23,7 +23,7 @@
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
-    max-width: 1000px;
+    max-width: 700px;
 }
 .text-box h1{
     font-size: 62px;
@@ -32,22 +32,6 @@
     margin: 10px 0 40px;
     font-size: 14px;
     color: #fff;
-}
-.btn{
-    display: inline-block;
-    text-decoration: none;
-    color: #fff;
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    font-size: 13px;
-    background-color: transparent;
-    position: relative;
-    cursor: pointer;
-}
-.btn:hover{
-    border: 1px solid #f44336;
-    background: #f44336;
-    transition: 1s;
 }
 
 nav .fa{
@@ -105,25 +89,29 @@ nav .fa{
 }
 
 .app-icon-button.linkedin {
-    background-image: url(images/LinkedIn-Logos/LI-In-Bug.png);
+    background-image: url(../images/LinkedIn-Logos/LI-In-Bug.png);
     background-color: #3966AD;
 }
 
 .app-icon-button.git {
     background-color: rgb(58, 58, 58);
-    background-image: url(images/github-mark/github-mark-white.png);
+    background-image: url(../images/github-mark/github-mark-white.png);
 }
 
 .app-icon-button.astronomy {
     background-color: rgb(0, 0, 0);
-    background-image: url(images/220926_Sat.png);
+    background-image: url(../images/220926_Sat.png);
+}
+
+.app-icon-button.fortnite {
+    background-color: rgb(0, 0, 0);
+    background-image: url(../images/fortnite.png);
 }
 
 .app-icon-button.wii {
     background-color: #fff;
-    background-image: url(images/wii_sports.png)
+    background-image: url(../images/wii_sports.png)
 }
-
 
 
 .photo-gallery {
@@ -158,9 +146,9 @@ nav .fa{
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     padding: 15px 30px;
-    color: #ffffff;
-    background: linear-gradient(#007bff, #0093ff);
-    border: none;
+    color: #005cbf;
+    background: radial-gradient(circle at center, #ffffffd6, #8bcfffe1);
+    border: #7294ca 1px solid;
     border-radius: 30px;
     cursor: pointer;
     box-shadow: 0px 10px 20px rgba(0,0,0,0.1);
